Update: bug fixes, responsiveness of modal fixed; premium status of books checked for non -user access to free books vs subscriptionRequired books; content blocked by sidebar on narrow screenwidths resolved.

--- a/styles/ForYou.module.css
+++ b/styles/ForYou.module.css
@@ -483,11 +483,12 @@
   }
 
   .container {
-    margin-left: 50px;
+    margin-left: 0;
   }
 
   .row {
     padding: 0 20px;
+    margin-left: max(200px, calc((100% - 1070px) / 2));
   }
 
   .search_wrapper {
