--- a/styles/LoginModal.css
+++ b/styles/LoginModal.css
@@ -8,14 +8,16 @@
 
 .login_wrapper {
   position: absolute;
-  left: 35%;
+  left: 50%;
   top: 15%;
-  width: 400px;
+  transform: translateX(-50%);
+  width: calc(100% - 32px);
+  max-width: 400px;
   height: 500px;
   background-color: #ffffff;
   border: 1px solid black;
   border-radius: 10px;
-  
+
 }
 
 .login_auth {
