--- a/styles/ResetPassword.css
+++ b/styles/ResetPassword.css
@@ -7,9 +7,11 @@
 
 .resetPw_wrapper {
     position: absolute;
-    left: 35%;
+    left: 50%;
     top: 15%;
-    width: 400px;
+    transform: translateX(-50%);
+    width: calc(100% - 32px);
+    max-width: 400px;
     height: 230px;
     background-color: #ffffff;
     border: 1px solid black ;
